# copilot-autoskill

./: .gitignore  DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/autoskill/: __init__.py  __main__.py  cli.py  db.py  distill.py  ingest.py  inject.py  mcp_server.py  paths.py  search.py  watcher.py
