[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "copilot-autoskill"
version = "0.1.0"
description = "Passively learn from GitHub Copilot usage, distill reusable skills, and search them semantically."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "scikit-learn>=1.3",
    "rich>=13.0",
    "mcp>=1.0",
    "watchdog>=3.0",
]

[project.scripts]
autoskill = "autoskill.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
